--- a/index.html
+++ b/index.html
@@ -1,10 +1,139 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <meta name="description" content="Harmonie Gestion - Gestion administrative et financière - Haute-Savoie"/>
+    <meta property="og:title" content="Harmonie Gestion - Gestion administrative et financière - Haute-Savoie"/>
+    <meta property="og:description" content="Harmonie Gestion - Gestion administrative et financière - Haute-Savoie"/>
+    <meta property="og:url" content="https://www.harmonie-gestion.fr"/>
+    <meta property="og:site_name" content="Harmonie Gestion"/>
+    <meta property="og:type" content="website"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:title" content="Harmonie Gestion - Gestion administrative et financière - Haute-Savoie"/>
+    <meta name="twitter:description" content="Harmonie Gestion - Gestion administrative et financière - Haute-Savoie"/>
+    <meta name="keywords" content="Comptabilité, Resources humaines, RH, Paie, Administratif"/>
+    <meta name="robots" content="index,follow"/>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org/",
+        "@type": "AccountingService",
+        "name": "Harmonie Gestion",
+        "founder": "Hilal GÜLER KOÇAK",
+        "url": "https://www.harmonie-gestion.fr",
+        "logo": "https://www.harmonie-gestion.fr/logo.svg",
+        "slogan": "Votre partenaire stratégique pour une gestion d'entreprise sans souci.",
+        "openingHours": "Mo-Fr 09:00-17:00",
+        "location": {
+          "@type": "PostalAddress",
+          "addressCountry": "FR",
+          "addressRegion": "Haute-Savoie",
+          "addressLocality": "Marignier",
+          "postalCode": "74970"
+        },
+        "email": "hilal@harmonie-gestion.fr",
+        "telephone": "+33766849093"
+      }
+    </script>
+    <link rel="stylesheet" href="normalize.css"/>
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="canonical" href="https://www.harmonie-gestion.fr"/>
     <title>Harmonie Gestion</title>
   </head>
   <body>
-    WIP
+    <header>
+      <div class="slogan">
+        <p>Votre partenaire stratégique pour une gestion d'entreprise sans souci.</p>
+        <button onclick="document.querySelector('main').scrollIntoView({behavior: 'smooth'})">
+          En savoir plus
+        </button>
+      </div>
+      <div class="logo">
+        <img src="logo.svg">
+        <div>HARMONIE</div>
+        <div>GESTION</div>
+      </div>
+    </header>
+    <main>
+      <div class="separator">
+        <img src="logo.svg">
+      </div>
+      <h2>Qui sommes-nous ?</h2>
+      <p>
+        Bienvenue chez HARMONIE GESTION, votre partenaire stratégique pour une gestion d'entreprise sans souci.
+        Nous prenons en charge l'intégralité de vos besoins administratifs, allant de la gestion des ressources
+        humaines à la comptabilité, en passant par la gestion des salaires et les déclarations sociales.
+      </p>
+      <p>
+        Faites confiance à HARMONIE GESTION pour libérer votre entreprise des contraintes administratives, vous
+        permettant de prospérer et de réaliser vos ambitions. Contactez-nous dès aujourd'hui pour découvrir comment
+        nous pouvons simplifier votre gestion d'entreprise.
+      </p>
+      <div class="separator">
+        <img src="logo.svg">
+      </div>
+      <h2>Ce que nous faisons</h2>
+      <div class="cards">
+        <div class="card">
+          <h4>Ressources humaines</h4>
+          <ul>
+            <li>Recrutement</li>
+            <li>Gestion des formations</li>
+            <li>Collecte et intégration des éléments variables de paie</li>
+            <li>Gestion de conflits</li>
+            <li>Rédaction de notes de service</li>
+            <li>Planning...</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h4>Gestion des salaires</h4>
+          <ul>
+            <li>Déclaration préalable à l'embauche</li>
+            <li>Bulletins de salaire</li>
+            <li>Déclaration Sociale Nominative</li>
+            <li>Administration du personnel</li>
+            <li>Gestion des congés payés</li>
+            <li>Suivi du registre du personnel...</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h4>Comptabilité</h4>
+          <ul>
+            <li>Saisie</li>
+            <li>Gestion de la trésorerie</li>
+            <li>Révision des comptes</li>
+            <li>Déclarations</li>
+            <li>Analyse de l'économie interne</li>
+            <li>Bilan...</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h4>Administratif</h4>
+          <ul>
+            <li>Classement documentaire</li>
+            <li>Office management</li>
+            <li>Restructuration service administratif</li>
+            <li>Traitement de courrier</li>
+            <li>Rédaction de courrier...</li>
+          </ul>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div>
+        <div class="title">Adresse</div>
+        <div>74970 Marignier</div>
+      </div>
+      <div>
+        <div class="title">Contact</div>
+        <div>Mme Hilal GÜLER KOÇAK</div>
+        <a href="tel:+33766849093">07 66 84 90 93</a>
+        <a href="mailto:hilal@harmonie-gestion.fr">hilal@harmonie-gestion.fr</a>
+      </div>
+      <div>
+        <div class="title">Horaires</div>
+        <div>Lundi-Vendredi 09:00-17:00</div>
+      </div>
+    </footer>
   </body>
 </html>
