Prise en compte de 'prefers-reduced-motion'

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <header>
       <div class="slogan">
         <p>Votre partenaire stratégique pour une gestion d'entreprise sans souci.</p>
-        <button onclick="document.querySelector('main').scrollIntoView({behavior: 'smooth'})">
+        <button onclick="document.querySelector('main').scrollIntoView()">
           En savoir plus
         </button>
       </div>
