--- a/index.html
+++ b/index.html
@@ -135,5 +135,13 @@
         <div>Lundi-Vendredi 09:00-17:00</div>
       </div>
     </footer>
+    <script src="upup.min.js"></script>
+    <script>
+      UpUp.start({
+        "cache-version": "v1",
+        "content-url": "index.html",
+        "assets": ["normalize.css", "style.css", "logo.svg", "montserrat.woff2"]
+      });
+    </script>
   </body>
 </html>
