--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
       </div>
     </header>
     <main>
-      <div class="separator">
-        <img src="logo.svg">
-      </div>
+      <img src="logo.svg" class="separator">
       <h2>Qui sommes-nous ?</h2>
       <p>
         Bienvenue chez HARMONIE GESTION, votre partenaire stratégique pour une gestion d'entreprise sans souci.
@@ -69,9 +67,7 @@
         permettant de prospérer et de réaliser vos ambitions. Contactez-nous dès aujourd'hui pour découvrir comment
         nous pouvons simplifier votre gestion d'entreprise.
       </p>
-      <div class="separator">
-        <img src="logo.svg">
-      </div>
+      <img src="logo.svg" class="separator">
       <h2>Ce que nous faisons</h2>
       <div class="cards">
         <div class="card">
@@ -138,7 +134,7 @@
     <script src="upup.min.js"></script>
     <script>
       UpUp.start({
-        "cache-version": "v1",
+        "cache-version": "v2",
         "content-url": "index.html",
         "assets": ["normalize.css", "style.css", "logo.svg", "montserrat.woff2"]
       });
