Ajout de l'attribut og:image

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta property="og:url" content="https://www.harmonie-gestion.fr"/>
     <meta property="og:site_name" content="Harmonie Gestion"/>
     <meta property="og:type" content="website"/>
+    <meta property="og:image" content="https://www.harmonie-gestion.fr/logo.svg"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:title" content="Harmonie Gestion - Gestion administrative et financière - Haute-Savoie"/>
     <meta name="twitter:description" content="Harmonie Gestion - Gestion administrative et financière - Haute-Savoie"/>
@@ -134,7 +135,7 @@
     <script src="upup.min.js"></script>
     <script>
       UpUp.start({
-        "cache-version": "v2",
+        "cache-version": "v3",
         "content-url": "index.html",
         "assets": ["normalize.css", "style.css", "logo.svg", "montserrat.woff2"]
       });
