--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="description" content="Harmonie Gestion - Gestion administrative et financière - Haute-Savoie"/>
-    <meta property="og:title" content="Harmonie Gestion - Gestion administrative et financière - Haute-Savoie"/>
-    <meta property="og:description" content="Harmonie Gestion - Gestion administrative et financière - Haute-Savoie"/>
-    <meta property="og:url" content="https://www.harmonie-gestion.fr"/>
-    <meta property="og:site_name" content="Harmonie Gestion"/>
     <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://www.harmonie-gestion.fr"/>
+    <meta property="og:title" content="Harmonie Gestion - Haute-Savoie"/>
+    <meta property="og:description" content="Gestion administrative et financière"/>
     <meta property="og:image" content="https://www.harmonie-gestion.fr/logo.svg"/>
+    <meta property="og:image:type" content="image/svg+xml"/>
+    <meta property="og:image:width" content="700"/>
+    <meta property="og:image:height" content="400"/>
     <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:title" content="Harmonie Gestion - Gestion administrative et financière - Haute-Savoie"/>
-    <meta name="twitter:description" content="Harmonie Gestion - Gestion administrative et financière - Haute-Savoie"/>
     <meta name="keywords" content="Comptabilité, Resources humaines, RH, Paie, Administratif"/>
     <meta name="robots" content="index,follow"/>
     <script type="application/ld+json">
