--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
     </header>
     <main>
-      <hr class="separator">
+      <div class="separator"></div>
       <h2>Qui sommes-nous ?</h2>
       <p>
         Bienvenue chez HARMONIE GESTION, votre partenaire stratégique pour une gestion d'entreprise sans souci.
@@ -68,7 +68,7 @@
         permettant de prospérer et de réaliser vos ambitions. Contactez-nous dès aujourd'hui pour découvrir comment
         nous pouvons simplifier votre gestion d'entreprise.
       </p>
-      <hr class="separator">
+      <div class="separator"></div>
       <h2>Ce que nous faisons</h2>
       <div class="cards">
         <div class="card">
