--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </script>
     <link rel="stylesheet" href="normalize.css"/>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="manifest" href="manifest.json"/>
     <link rel="canonical" href="https://www.harmonie-gestion.fr"/>
     <title>Harmonie Gestion</title>
   </head>
