--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="description" content="Gestion administrative et financière - Marignier, Haute-Savoie"/>
+    <meta name="theme-color" content="#f2eee8"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://www.harmonie-gestion.fr"/>
     <meta property="og:title" content="Harmonie Gestion"/>
@@ -51,7 +52,7 @@
         </button>
       </div>
       <div class="logo">
-        <img src="logo.svg">
+        <img src="logo.svg" alt="Logo d'Harmonie Gestion">
         <div>HARMONIE</div>
         <div>GESTION</div>
       </div>
@@ -73,7 +74,7 @@
       <h2>Ce que nous faisons</h2>
       <div class="cards">
         <div class="card">
-          <h4>Ressources humaines</h4>
+          <h3>Ressources humaines</h3>
           <ul>
             <li>Recrutement</li>
             <li>Gestion des formations</li>
@@ -84,7 +85,7 @@
           </ul>
         </div>
         <div class="card">
-          <h4>Gestion des salaires</h4>
+          <h3>Gestion des salaires</h3>
           <ul>
             <li>Déclaration préalable à l'embauche</li>
             <li>Bulletins de salaire</li>
@@ -95,7 +96,7 @@
           </ul>
         </div>
         <div class="card">
-          <h4>Comptabilité</h4>
+          <h3>Comptabilité</h3>
           <ul>
             <li>Saisie</li>
             <li>Gestion de la trésorerie</li>
@@ -106,7 +107,7 @@
           </ul>
         </div>
         <div class="card">
-          <h4>Administratif</h4>
+          <h3>Administratif</h3>
           <ul>
             <li>Classement documentaire</li>
             <li>Office management</li>
