Suppression de normalize.css

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
         "telephone": "+33766849093"
       }
     </script>
-    <link rel="stylesheet" href="normalize.css"/>
     <link rel="stylesheet" href="style.css"/>
     <link rel="manifest" href="manifest.json"/>
     <link rel="canonical" href="https://www.harmonie-gestion.fr"/>
@@ -139,7 +138,7 @@
       UpUp.start({
         "cache-version": "v4",
         "content-url": "index.html",
-        "assets": ["normalize.css", "style.css", "logo.svg", "montserrat.woff2"]
+        "assets": ["style.css", "logo.svg", "montserrat.woff2"]
       });
     </script>
   </body>
