MAJ de l'adresse

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <meta name="description" content="Gestion administrative et financière - Marignier, Haute-Savoie"/>
+    <meta name="description" content="Gestion administrative et financière - Thyez, Haute-Savoie"/>
     <meta name="theme-color" content="#f2eee8"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://www.harmonie-gestion.fr"/>
     <meta property="og:title" content="Harmonie Gestion"/>
-    <meta property="og:description" content="Gestion administrative et financière - Marignier, Haute-Savoie"/>
+    <meta property="og:description" content="Gestion administrative et financière - Thyez, Haute-Savoie"/>
     <meta property="og:image" content="https://www.harmonie-gestion.fr/ogp-image.png"/>
     <meta property="og:image:type" content="image/png"/>
     <meta property="og:image:width" content="1200"/>
@@ -34,9 +34,10 @@
         "location": {
           "@type": "PostalAddress",
           "addressCountry": "FR",
+          "addressLocality": "Thyez",
           "addressRegion": "Haute-Savoie",
-          "addressLocality": "Marignier",
-          "postalCode": "74970"
+          "postalCode": "74300",
+          "streetAddress": "269 Rue des Sorbiers"
         },
         "email": "hilal@harmonie-gestion.fr",
         "telephone": "+33766849093"
@@ -121,7 +122,9 @@
     <footer>
       <div>
         <div class="title">Adresse</div>
-        <div>74970 Marignier</div>
+        <div>Forum des Lacs</div>
+        <div>269 Rue des Sorbiers</div>
+        <div>74300 Thyez</div>
       </div>
       <div>
         <div class="title">Contact</div>
