--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="description" content="Gestion administrative et financière - Thyez, Haute-Savoie"/>
+    <meta name="keywords" content="Comptabilité, Resources humaines, RH, Paie, Administratif"/>
+    <meta name="robots" content="index,follow"/>
     <meta name="theme-color" content="#f2eee8"/>
+    <meta name="twitter:card" content="summary_large_image"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://www.harmonie-gestion.fr"/>
     <meta property="og:title" content="Harmonie Gestion"/>
@@ -13,13 +16,15 @@
     <meta property="og:image:type" content="image/png"/>
     <meta property="og:image:width" content="1200"/>
     <meta property="og:image:height" content="630"/>
-    <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="keywords" content="Comptabilité, Resources humaines, RH, Paie, Administratif"/>
-    <meta name="robots" content="index,follow"/>
     <title>Harmonie Gestion</title>
     <link rel="stylesheet" href="style.css"/>
     <link rel="manifest" href="manifest.json"/>
     <link rel="canonical" href="https://www.harmonie-gestion.fr"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="72x72" href="/favicon-72x72.png">
+    <link rel="icon" type="image/png" sizes="120x120" href="/favicon-120x120.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192x192.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <script defer src="upup.min.js"></script>
     <script type="application/ld+json">
       {
