--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <meta name="description" content="Gestion administrative et financière - Thyez, Haute-Savoie"/>
-    <meta name="keywords" content="Comptabilité, Resources humaines, RH, Paie, Administratif"/>
-    <meta name="robots" content="index,follow"/>
-    <meta name="theme-color" content="#f2eee8"/>
-    <meta name="twitter:card" content="summary_large_image"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://www.harmonie-gestion.fr"/>
-    <meta property="og:title" content="Harmonie Gestion"/>
-    <meta property="og:description" content="Gestion administrative et financière - Thyez, Haute-Savoie"/>
-    <meta property="og:image" content="https://www.harmonie-gestion.fr/ogp-image.png"/>
-    <meta property="og:image:type" content="image/png"/>
-    <meta property="og:image:width" content="1200"/>
-    <meta property="og:image:height" content="630"/>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
+    <meta name="description" content="Gestion administrative et financière - Thyez, Haute-Savoie">
+    <meta name="keywords" content="Comptabilité, Resources humaines, RH, Paie, Administratif">
+    <meta name="robots" content="index,follow">
+    <meta name="theme-color" content="#f2eee8">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.harmonie-gestion.fr">
+    <meta property="og:title" content="Harmonie Gestion">
+    <meta property="og:description" content="Gestion administrative et financière - Thyez, Haute-Savoie">
+    <meta property="og:image" content="https://www.harmonie-gestion.fr/ogp-image.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <title>Harmonie Gestion</title>
-    <link rel="stylesheet" href="style.css"/>
-    <link rel="manifest" href="manifest.json"/>
-    <link rel="canonical" href="https://www.harmonie-gestion.fr"/>
+    <link rel="stylesheet" href="style.css">
+    <link rel="manifest" href="manifest.json">
+    <link rel="canonical" href="https://www.harmonie-gestion.fr">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="72x72" href="/favicon-72x72.png">
     <link rel="icon" type="image/png" sizes="120x120" href="/favicon-120x120.png">
