MAJ des horaires d'ouverture

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         "url": "https://www.harmonie-gestion.fr",
         "logo": "https://www.harmonie-gestion.fr/logo.svg",
         "slogan": "Votre partenaire stratégique pour une gestion d'entreprise sans souci.",
-        "openingHours": "Mo-Fr 09:00-17:00",
+        "openingHours": "Mo,Tu,Th,Fr 08:30-16:30",
         "location": {
           "@type": "PostalAddress",
           "addressCountry": "FR",
@@ -94,8 +94,8 @@
           <h3>Gestion des salaires</h3>
           <ul>
             <li>Déclaration préalable à l'embauche</li>
-            <li>Bulletins de salaire</li>
             <li>Déclaration Sociale Nominative</li>
+            <li>Bulletins de salaire</li>
             <li>Administration du personnel</li>
             <li>Gestion des congés payés</li>
             <li>Suivi du registre du personnel...</li>
@@ -117,7 +117,6 @@
           <ul>
             <li>Classement documentaire</li>
             <li>Office management</li>
-            <li>Restructuration service administratif</li>
             <li>Traitement de courrier</li>
             <li>Rédaction de courrier...</li>
           </ul>
@@ -139,7 +138,8 @@
       </div>
       <div>
         <div class="title">Horaires</div>
-        <div>Lundi-Vendredi 09:00-17:00</div>
+        <div>Lundi, Mardi, Jeudi, Vendredi</div>
+        <div>08:30 - 16:30</div>
       </div>
     </footer>
     <script>
