--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
       </p>
       <p>
         Faites confiance à HARMONIE GESTION pour libérer votre entreprise des contraintes administratives, vous
-        permettant de prospérer et de réaliser vos ambitions. Contactez-nous dès aujourd'hui pour découvrir comment
-        nous pouvons simplifier votre gestion d'entreprise.
+        permettant de prospérer et de réaliser vos ambitions. <a href="mailto:hilal@harmonie-gestion.fr">Contactez-nous</a>
+        dès aujourd'hui pour découvrir comment nous pouvons simplifier votre gestion d'entreprise.
       </p>
       <div class="separator"></div>
       <h2>Ce que nous faisons</h2>
@@ -102,14 +102,14 @@
           </ul>
         </div>
         <div class="card">
-          <h3>Comptabilité</h3>
+          <h3>Pré-comptabilité</h3>
           <ul>
             <li>Saisie</li>
             <li>Gestion de la trésorerie</li>
             <li>Révision des comptes</li>
             <li>Déclarations</li>
             <li>Analyse de l'économie interne</li>
-            <li>Bilan...</li>
+            <li>Suivi de la comptabilité jusqu'au bilan...</li>
           </ul>
         </div>
         <div class="card">
