--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <p>
         Bienvenue chez HARMONIE GESTION, votre partenaire stratégique pour une gestion d'entreprise sans souci.
         Nous prenons en charge l'intégralité de vos besoins administratifs, allant de la gestion des ressources
-        humaines à la comptabilité, en passant par la gestion des salaires et les déclarations sociales.
+        humaines à la pré-comptabilité, en passant par la gestion des salaires et les déclarations sociales.
       </p>
       <p>
         Faites confiance à HARMONIE GESTION pour libérer votre entreprise des contraintes administratives, vous
@@ -104,7 +104,6 @@
         <div class="card">
           <h3>Pré-comptabilité</h3>
           <ul>
-            <li>Saisie</li>
             <li>Gestion de la trésorerie</li>
             <li>Révision des comptes</li>
             <li>Déclarations</li>
